Fix cart drawer toggle visibilty

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -63,6 +63,10 @@ h4 {
 	display: inline-block;
 }
 
+.cart-visible {
+	display: flex;
+}
+
 .header__menu-button {
 	height: 100%;
 	width: 2.5rem;
